@@ -20,98 +20,141 @@
 #include "common.h"
 #include "sysinfo.h"
 
+typedef struct
+{
+	zbx_uint64_t	nread;
+	zbx_uint64_t	nwritten;
+	zbx_uint64_t	reads;
+	zbx_uint64_t	writes;
+} zbx_kstat_t;
+
+static zbx_kstat_t zbx_kstat;
+
 int	get_diskstat(const char *devname, zbx_uint64_t *dstat)
 {
 	return FAIL;
 }
 
-static int	get_kstat_io(const char *name, kstat_io_t *returned_data)
+static int	get_kstat_io(const char *name, zbx_kstat_t *zk)
 {
-	int result = SYSINFO_RET_FAIL;
-	kstat_ctl_t *kc;
-	kstat_t *kt;
+	int		result = SYSINFO_RET_FAIL;
+	kstat_ctl_t	*kc;
+	kstat_t		*kt;
+	kstat_io_t	kio;
 
-	kc = kstat_open();
-	if (kc)
+	if (0 == (kc = kstat_open()))
+		return result;
+
+	if ('\0' != *name)
 	{
-		kt = kstat_lookup(kc, NULL, -1, (char *) name);
-		if (kt)
+		if (0 == (kt = kstat_lookup(kc, NULL, -1, (char *)name)))
+			goto clean;
+
+		if (KSTAT_TYPE_IO != kt->ks_type)
+			goto clean;
+
+		if (-1 != kstat_read(kc, kt, &kio))
 		{
-			if (kt->ks_type == KSTAT_TYPE_IO)
+			zk->nread = kio.nread;
+			zk->nwritten = kio.nwritten;
+			zk->reads = kio.reads;
+			zk->writes = kio.writes;
+
+			result = SYSINFO_RET_OK;
+		}
+	}
+	else
+	{
+		memset(zk, 0, sizeof(*zk));
+
+		for (kt = kc->kc_chain; NULL != kt; kt = kt->ks_next)
+		{
+			if (KSTAT_TYPE_IO == kt->ks_type && 0 == strcmp("disk", kt->ks_class))
 			{
-				if(kstat_read(kc, kt, returned_data) != -1)
-				{
-					result = SYSINFO_RET_OK;
-				}
+				kstat_read(kc, kt, &kio);
+
+				zk->nread += kio.nread;
+				zk->nwritten += kio.nwritten;
+				zk->reads += kio.reads;
+				zk->writes += kio.writes;
 			}
 		}
-		kstat_close(kc);
+
+		result = SYSINFO_RET_OK;
 	}
+clean:
+	kstat_close(kc);
+
 	return result;
 }
 
 static int	VFS_DEV_READ_BYTES(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result)
 {
-	kstat_io_t	kio;
-	int		ret;
+	int	ret;
 
-	ret = get_kstat_io(param, &kio);
-
-	if(ret == SYSINFO_RET_OK)
-	{
-		/* u_longlong_t nread;	number of bytes read */
-		SET_UI64_RESULT(result, kio.nread);
-	}
+	if (SYSINFO_RET_OK == (ret = get_kstat_io(param, &zbx_kstat)))
+		SET_UI64_RESULT(result, zbx_kstat.nread);
 
 	return ret;
 }
 
 static int	VFS_DEV_READ_OPERATIONS(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result)
 {
-	kstat_io_t	kio;
-	int		ret;
+	int	ret;
 
-	ret = get_kstat_io(param, &kio);
-
-	if(ret == SYSINFO_RET_OK)
-	{
-		/* uint_t reads;    number of read operations */
-		SET_UI64_RESULT(result, kio.reads);
-	}
+	if (SYSINFO_RET_OK == (ret = get_kstat_io(param, &zbx_kstat)))
+		SET_UI64_RESULT(result, zbx_kstat.reads);
 
 	return ret;
 }
 
 static int	VFS_DEV_WRITE_BYTES(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result)
 {
-	kstat_io_t	kio;
-	int		ret;
+	int	ret;
 
-	ret = get_kstat_io(param, &kio);
-
-	if(ret == SYSINFO_RET_OK)
-	{
-		/* u_longlong_t nwritten;   number of bytes written */
-		SET_UI64_RESULT(result, kio.nwritten);
-	}
+	if (SYSINFO_RET_OK == (ret = get_kstat_io(param, &zbx_kstat)))
+		SET_UI64_RESULT(result, zbx_kstat.nwritten);
 
 	return ret;
 }
 
 static int	VFS_DEV_WRITE_OPERATIONS(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result)
 {
-	kstat_io_t	kio;
-	int		ret;
+	int	ret;
 
-	ret = get_kstat_io(param, &kio);
-
-	if(ret == SYSINFO_RET_OK)
-	{
-		/* uint_t   writes;    number of write operations */
-		SET_UI64_RESULT(result, kio.writes);
-	}
+	if (SYSINFO_RET_OK == (ret = get_kstat_io(param, &zbx_kstat)))
+		SET_UI64_RESULT(result, zbx_kstat.writes);
 
 	return ret;
+}
+
+static int	process_mode_function(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result, const MODE_FUNCTION *fl)
+{
+	char	devname[MAX_STRING_LEN], mode[16];
+	int	i;
+
+	if (2 < num_param(param))
+		return SYSINFO_RET_FAIL;
+
+	if (0 != get_param(param, 1, devname, sizeof(mode)) || 0 == strcmp("all", devname))
+		*devname = '\0';
+
+	if (0 != get_param(param, 2, mode, sizeof(mode)))
+		*mode = '\0';
+
+	if ('\0' == *mode)
+	{
+		/* default parameter */
+		strscpy(mode, "bytes");
+	}
+
+	for (i = 0; NULL != fl[i].mode; i++)
+	{
+		if (0 == strcmp(mode, fl[i].mode))
+			return (fl[i].function)(cmd, devname, flags, result);
+	}
+
+	return SYSINFO_RET_FAIL;
 }
 
 int	VFS_DEV_WRITE(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result)
@@ -120,38 +163,10 @@ int	VFS_DEV_WRITE(const char *cmd, const char *param, unsigned flags, AGENT_RESU
 	{
 		{"bytes", 	VFS_DEV_WRITE_BYTES},
 		{"operations", 	VFS_DEV_WRITE_OPERATIONS},
-		{NULL,		0}
+		{NULL,		NULL}
 	};
 
-	char devname[MAX_STRING_LEN];
-	char mode[MAX_STRING_LEN];
-	int i;
-
-        if(num_param(param) > 2)
-        {
-                return SYSINFO_RET_FAIL;
-        }
-
-        if(get_param(param, 1, devname, sizeof(mode)) != 0)
-        {
-                return SYSINFO_RET_FAIL;
-        }
-
-	if(get_param(param, 2, mode, sizeof(mode)) != 0)
-        {
-                mode[0] = '\0';
-        }
-        if(mode[0] == '\0')
-	{
-		/* default parameter */
-		zbx_snprintf(mode, sizeof(mode), "bytes");
-	}
-
-	for(i=0; fl[i].mode!=0; i++)
-		if(strncmp(mode, fl[i].mode, MAX_STRING_LEN)==0)
-			return (fl[i].function)(cmd, devname, flags, result);
-
-	return SYSINFO_RET_FAIL;
+	return process_mode_function(cmd, param, flags, result, fl);
 }
 
 int	VFS_DEV_READ(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result)
@@ -160,35 +175,8 @@ int	VFS_DEV_READ(const char *cmd, const char *param, unsigned flags, AGENT_RESUL
 	{
 		{"bytes",	VFS_DEV_READ_BYTES},
 		{"operations",	VFS_DEV_READ_OPERATIONS},
-		{NULL,		0}
+		{NULL,		NULL}
 	};
 
-	char devname[MAX_STRING_LEN];
-	char mode[MAX_STRING_LEN];
-	int i;
-
-        if(num_param(param) > 2)
-        {
-                return SYSINFO_RET_FAIL;
-        }
-
-        if(get_param(param, 1, devname, sizeof(devname)) != 0)
-        {
-                return SYSINFO_RET_FAIL;
-        }
-
-	if(get_param(param, 2, mode, sizeof(mode)) != 0)
-        {
-                mode[0] = '\0';
-        }
-        if(mode[0] == '\0')
-	{
-		/* default parameter */
-		zbx_snprintf(mode, sizeof(mode), "bytes");
-	}
-	for(i=0; fl[i].mode!=0; i++)
-		if(strncmp(mode, fl[i].mode, MAX_STRING_LEN)==0)
-			return (fl[i].function)(cmd, devname, flags, result);
-
-	return SYSINFO_RET_FAIL;
+	return process_mode_function(cmd, param, flags, result, fl);
 }
